--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -1185,6 +1185,11 @@ to{
 ===============================================================================================================================================================================================================================================================================*/
 
 @media (max-width: 767.98px) {
+
+body {
+   max-width: 100vw;
+}   
+
 .Class_MainWrapper{
    display: flex;
    flex-wrap: wrap;
